Content metatags with model overrides and tests

--- a/metatags/tests/templates/base.html
+++ b/metatags/tests/templates/base.html
@@ -1,7 +1,9 @@
 {% load metatags_tags %}
 <html>
     <head>
+        {% block metatags %}
         {% metatags %}
+        {% endblock %}
     </head>
 </html>
 <body>
