--- a/metatags/templates/metatags/inclusion_tags/metatags.html
+++ b/metatags/templates/metatags/inclusion_tags/metatags.html
@@ -1,9 +1,7 @@
 {% for tag in tags %}
     {% if tag.name == "title" %}
         <title>{{ tag.content }}</title>
-    {% elif tag.name in tag_name_map.property %}
-        <meta property="{{ tag.name }}" content="{{ tag.content }}">
     {% else %}
-        <meta name="{{ tag.name }}" content="{{ tag.content }}">
+    <meta {{ tag.type }}="{{ tag.name }}" content="{{ tag.content }}">
     {% endif %}
 {% endfor %}
